trunk/Archive2/d8/ce6f15b4bdac85/output
main.cpp:1:1: error: 'include' does not name a type
 include <stdio.h>
 ^
